# aula09_bootcamp

./: dados.parquet  etl.py  exemplo_00.py  exemplo_sentry.py  logging_exemplos_erros.py  pipeline.py  pyproject.toml  timer_decorator.py  utils_log.py
